Tue Aug 15 20:39:45 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Correct library name to link against for BerkeleyDB 3.1, from libdb
	  to libdb_cxx

Tue Aug 15 20:24:19 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added OmFeatureUnavailableError exception, to be thrown when a
	  feature is not compiled in, or otherwise unavailable.

Tue Aug 15 15:19:45 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Incorporated Jon Fielder's patches to TcpServer - it's now a
	  forking server rather than serving connections one at a time.

Tue Aug 15 14:47:06 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Link quartz database into DatabaseBuilder and testsuite.  Now
	  ready to begin writing it. :)

Tue Aug 15 11:27:04 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added initial (empty) quartz_database.{cc,h} files, so that
	  distcheck will work again.

Tue Aug 15 11:24:51 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Removed netprogs/omnetclient.cc - unused file.

Mon Aug 14 19:11:03 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Python tests up to 25 pass, 3 fail (plus test_alwaysfail).

Mon Aug 14 18:42:05 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Java and SWIG bindings brought up to date with recent changes
	  to OmWritableDatabase

	* Python version of apitest.cc now has 29 tests converting, of which
	  21 pass.

Mon Aug 14 15:50:00 BST 2000 Olly Betts

	* MultiDatabase::MultiDatabase(const DatabaseBuilderParams & params)
	  now always throws OmInvalidOperationError.  The other constructor
	  is a much less awkward way to construct a multidatabase and
	  removing it greatly simplifies DatabaseBuilderParams.

Mon Aug 14 15:13:00 BST 2000 Olly Betts

	* Removed default stuff from OmSettings and added methods to read and
	  write integer and real values.

Mon Aug 14 12:36:01 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
